--- a/Express-Handlebars/views/layouts/main.handlebars
+++ b/Express-Handlebars/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Commissary</title>
+    <link href='/public/css/bulma.css'>
+    <script src='/public/js/jquery.js'></script>
 </head>
 <body>
     
